--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </form>
         </div>
         <br>
-        <div class="card col-12 col-md-8">
-          <div class="col-12 col-md-8">
+        <div class="card col-12">
+          <div class="col-12 col-12">
             <h2 class="subtitle">Showing weather data for: <span id="city-search-term"></span></h2>
             <div id="weather-data" class="list-group"></div>
           </div>
